--- a/gradle-plugin/bundle1/build.gradle
+++ b/gradle-plugin/bundle1/build.gradle
@@ -33,17 +33,19 @@ android {
         abortOnError false
     }
 }
-
+afterEvaluate {
+    def compileReleaseJavaWithJavac = project.tasks.findByName("compileReleaseJavaWithJavac")
+    compileReleaseJavaWithJavac.doLast {
+        println("cjf compileReleaseJavaWithJavac bundl1")
+    }
+}
 dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     api "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
-    api 'androidx.core:core-ktx:1.5.0'
-    api 'androidx.appcompat:appcompat:1.3.0'
-    api 'com.google.android.material:material:1.3.0'
-    api 'androidx.constraintlayout:constraintlayout:2.0.4'
     api 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     api 'androidx.navigation:navigation-ui-ktx:2.3.5'
     api 'io.github.jamesfchen:perf-api:1.0.0'
+    api project(":loader")
 }
