--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -21,6 +21,7 @@ android.injected.testOnly=false
 #firebasePerformanceInstrumentationEnabled=false
 
 ########################################################version control start
+groupId =io.github.jamesfchen
 applicationId=com.jamesfchen.spacecraft
 compileSdkVersion = 30
 buildToolsVersion = 30.0.2
