--- a/android/script/api_module.gradle
+++ b/android/script/api_module.gradle
@@ -42,4 +42,39 @@ dependencies {
 //    kapt 'com.alibaba:arouter-compiler:1.5.2'
     api 'com.alibaba:arouter-api:1.3.2'
 }
+def findArtifact() {
+    def myGroupId = ''
+    def myArtifactId = ''
+    def myVersion = ''
+    def moduleSimpleName = ''
+    def sourcePath = ''
+    def binaryPath = ''
+    for (def module : gradle.ext.modules) {
+        if (project.path == module.sourcePath) {
+            moduleSimpleName = module.simpleName
+            sourcePath = module.sourcePath
+            binaryPath = module.binaryPath
+            myGroupId = binaryPath.split(":")[0]
+            myArtifactId = binaryPath.split(":")[1]
+            myVersion = binaryPath.split(":")[2]
+            println("cjf ${myGroupId} $myArtifactId $myVersion")
+            break
+        }
+    }
+    if ((moduleSimpleName == null || moduleSimpleName.isEmpty())
+            || (sourcePath == null || sourcePath.isEmpty())
+            || (binaryPath == null || binaryPath.isEmpty())
+    ) {
+        throw IllegalArgumentException("moduleSimpleName:${moduleSimpleName} :sourcePath${sourcePath} :binaryPath${binaryPath} 这些参数都要配置")
+    }
+    return [moduleSimpleName,myGroupId,myArtifactId,myVersion]
+}
+def (moduleSimpleName,myGroupId, myArtifactId,myVersion) = findArtifact()
 apply from : "${rootDir}/script/module_publisher.gradle"
+publish {
+    name = moduleSimpleName
+    groupId = myGroupId
+    artifactId = myArtifactId
+    version = "1.0.0"
+    website = "https://github.com/JamesfChen/spacecrafe-android"
+}
