--- a/android/build.gradle
+++ b/android/build.gradle
@@ -11,6 +11,8 @@ buildscript {
         maven { url 'https://plugins.gradle.org/m2/' }
         maven { url 'https://maven.aliyun.com/repository/google/' }
         maven { url "https://maven.aliyun.com/repository/public" }
+        //publish 同时包含rlease与snapshot
+        maven { url 'https://s01.oss.sonatype.org/content/repositories/public/' }
         maven { url uri("$rootDir/repo") }
         mavenCentral()
         mavenLocal()
@@ -54,6 +56,7 @@ allprojects {
         maven { url 'https://plugins.gradle.org/m2/' }
         maven { url 'https://maven.aliyun.com/repository/google/' }
         maven { url "https://maven.aliyun.com/repository/public" }
+        maven { url 'https://s01.oss.sonatype.org/content/repositories/public/' }
         maven { url uri("$rootDir/repo") }
         mavenLocal()
         mavenCentral()
