--- a/android/module_config.json
+++ b/android/module_config.json
@@ -185,6 +185,8 @@
         "framework-network",
         "framework-av",
         "framework-image",
+        "framework-hybrid",
+        "framework-storage",
         "framework-rn"
       ]
     },
