--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,2 +1,46 @@
+image: openjdk:11-jdk
+
+variables:
+  ANDROID_COMPILE_SDK: "29"
+  ANDROID_BUILD_TOOLS: "29.0.3"
+  ANDROID_SDK_TOOLS: "6514223_latest"
+cache:
+  paths:
+    - .gradle/wrapper
+    - .gradle/caches
+before_script:
+  - export GRADLE_USER_HOME=`pwd`/.gradle
+  - apt-get --quiet update --yes
+  - apt-get --quiet install --yes wget tar unzip lib32stdc++6 lib32z1
+  - wget --quiet --output-document=commandlinetools.zip https://dl.google.com/android/repository/commandlinetools-linux-${ANDROID_SDK_TOOLS}.zip
+  - export REPO_OS_OVERRIDE="linux"
+  - unzip -d android-sdk-linux commandlinetools.zip
+  - export ANDROID_HOME=$PWD/android-sdk-linux
+  - echo y | android-sdk-linux/tools/bin/sdkmanager "platform-tools"  "platforms;android-${ANDROID_COMPILE_SDK}" --sdk_root=${ANDROID_HOME} >/dev/null
+  - echo y | android-sdk-linux/tools/bin/sdkmanager "build-tools;${ANDROID_BUILD_TOOLS}" --sdk_root=${ANDROID_HOME} >/dev/null
+  #  - export PATH=$PATH:$PWD/android-sdk-linux/platform-tools/
+  # temporarily disable checking for EPIPE error and use yes to accept all licenses
+  - set +o pipefail
+  - yes | android-sdk-linux/tools/bin/sdkmanager --licenses --sdk_root=${ANDROID_HOME} >/dev/null
+  - set -o pipefail
+  #  - apt-get install lib32ncurses5
+  #  - apt install zlib1g-dev libncurses5-dev lib32z1 lib32ncurses6 -y
+  - cd android
+  - chmod +x ./gradlew
+  - ./gradlew includeAll
+after_script:
+  - echo "root after script"
+#  - cd ..
+stages:
+  - build
+  - test
+  - deploy
+assembleDebug:
+  stage: build
+  script:
+    - echo "root after script"
 include:
-  - '/android/.gitlab-ci-android.yml'
+  #  - '/android/.gitlab-ci-fwk.yml'
+  - '/android/.gitlab-ci-myhome.yml'
+#  - '/android/.gitlab-ci-hotel.yml'
+
