--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,7 +40,7 @@ assembleDebug:
   script:
     - echo "root after script"
 include:
-  #  - '/android/.gitlab-ci-fwk.yml'
+  - '/android/.gitlab-ci-fwk.yml'
   - '/android/.gitlab-ci-myhome.yml'
-#  - '/android/.gitlab-ci-hotel.yml'
+  - '/android/.gitlab-ci-hotel.yml'
 
