--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,7 +36,7 @@ stages:
   - test
   - deploy
 include:
-  - '/android/.gitlab-ci-fwk.yml'
+  - '.gitlab-ci-fwk.yml'
   - '/android/.gitlab-ci-myhome.yml'
   - '/android/.gitlab-ci-hotel.yml'
 
