--- a/android/.gitlab-ci-myhome.yml
+++ b/android/.gitlab-ci-myhome.yml
@@ -1,12 +1,11 @@
-#home-myhome-build:
-#  only:
-#    changes:
-##      - components/home-module/myhome/*.{java,kt,xml,gradle}
-#      - components/home-module/myhome/**/*
-#  stage: build
-#  script:
-##    - ./gradlew includeSourceModule  -PmoduleName=framework-myhome
-#    - ./gradlew :components:home-module:myhome:assemble
+home-myhome-build:
+  only:
+    changes:
+#      - components/home-module/myhome/*.{java,kt,xml,gradle}
+      - components/home-module/myhome/**/*
+  stage: build
+  script:
+    - ./gradlew :components:home-module:myhome:assemble
 #
 #hotel-myhome-lint:
 #  only:
