--- a/android/.gitlab-ci-myhome.yml
+++ b/android/.gitlab-ci-myhome.yml
@@ -1,45 +1,45 @@
-homeMyhomeBuild:
-#  only:
-#    changes:
+home-myhome-build:
+  only:
+    changes:
 #      - components/home-module/myhome/*.{java,kt,xml,gradle}
-#      - components/home-module/myhome/**/*
+      - /android/components/home-module/myhome/**/*
   stage: build
   script:
     - ./gradlew :components:home-module:myhome:assemble
 
-#
-#hotel-myhome-lint:
-#  only:
-#    changes:
-#      - components/home-module/myhome/**/*
-#  stage: build
-#  script:
-#    - ./gradlew :components:home-module:myhome:lintInhouse
-#
-#homeMyhomeDeploy:
-#  only:
-#    changes:
-#      - components/home-module/myhome/**/*
-#  stage: deploy
-#  script:
-#    - ./gradlew :components:home-module:myhome:publishAarPublicationToMavenCentralRepository #发布到远程仓库
+
+hotel-myhome-lint:
+  only:
+    changes:
+      - /android/components/home-module/myhome/**/*
+  stage: build
+  script:
+    - ./gradlew :components:home-module:myhome:lintInhouse
+
+home-myhome-deploy:
+  only:
+    changes:
+      - /android/components/home-module/myhome/**/*
+  stage: deploy
+  script:
+    - ./gradlew :components:home-module:myhome:publishAarPublicationToMavenCentralRepository #发布到远程仓库
 
 ## ========================
-#home-daily-check1:
-#  only:
-#    changes:
-#      - components/home-module/**/*
-#  stage: build
-#  script:
-#    - ./gradlew :components:hotel-module:main:fileCounter
-#home-daily-check2:
-#  only:
-#    changes:
-#      - components/home-module/**/*
-#  stage: build
-#  script:
-#    - ./gradlew :components:hotel-module:main:dangerousApiTask
-#
+home-daily-check1:
+  only:
+    changes:
+      - /android/components/home-module/**/*
+  stage: build
+  script:
+    - ./gradlew :components:hotel-module:main:fileCounter
+home-daily-check2:
+  only:
+    changes:
+      - /android/components/home-module/**/*
+  stage: build
+  script:
+    - ./gradlew :components:hotel-module:main:dangerousApiTask
+
 ##debugTests:
 ##  stage: test
 ##  script:
